--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -3,5 +3,6 @@
 @import './components/Signup';
 @import './components/AdminDashboard';
 @import './components/CreationForm';
+@import './components/EditionForm';
 
 @import './views/App.scss';
