--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -4,5 +4,10 @@
 @import './components/AdminDashboard';
 @import './components/CreationForm';
 @import './components/EditionForm';
+@import './components/Search';
+@import './components/TaleCard';
+@import './components/AdminCard';
+@import './components/AllTaleList';
+
 
 @import './views/App.scss';
