--- a/client/src/styles/views/_App.scss
+++ b/client/src/styles/views/_App.scss
@@ -4,11 +4,12 @@
 
 #root {
     text-align: center;
-    padding: 0;
-    min-height: 100vh;
     font-family: 'Schoolbell', cursive;
+    padding: 0;
+    margin: 0;
     font-size: medium;
     background: rgb(157,141,241);
 
      
 }   
+
