--- a/client/src/styles/components/_Login.scss
+++ b/client/src/styles/components/_Login.scss
@@ -4,36 +4,96 @@
 .login-form{
     display: flex;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 6%;
+    align-items: center;
    
-
 
     p{
         font-size: large;
+        margin-bottom: 3%;
+        
 
     }
 
     .inputs{
+        margin-top: 6%;
+        background-color: rgb(0, 0, 0,0.4);
+        border:none;
+        border-radius: 5px;
+        width: 100%;
+        text-align: center;
+        padding: 5px;
+        color: $gold;
         
+    }
+
+    .inputs::placeholder{
+        color:$blue;
     }
  
     .submit-button{
-        color: aqua;
-        
-
-        
+        background-color: $gold;
+        border: none;
+        width: 25%;
+        padding: 5px;
+        border-radius: 5px;
+        margin-top: 6%;
+      
     }
 }
 
-section{
+
+   
     .normal-button {
+        margin-top: 6%;
+        border-radius: 5px;
+        border: none;
+        width: 40%;
+        padding: 5px;
+        background-color: $pink;
        
        
     
     }
+
+
+
+@media (width > 500px ){
+    .normal-button {
+       margin-top: 3%;
+       margin-bottom: 5%;
+       
+       
+    
+    }
+    .submit-button{
+        background-color: $pink;
+       
+      
+    }
 }
 
+@media (width > 800px ){
 
+    .login-form{
+        margin: 0;
+    }
+   
+    .submit-button{
+        margin: 2% !important;
+       
+      
+    }
+    .normal-button {
+       margin: 0%;
+       width: 15%; 
+       margin-bottom: 5%;
+      
+        
+    
+    }
 
+  
 
+}
     
