sass sign up complete

--- a/client/src/styles/components/_Login.scss
+++ b/client/src/styles/components/_Login.scss
@@ -85,7 +85,7 @@
       
     }
     .normal-button {
-       margin: 0%;
+       margin-top: 0.5%;
        width: 15%; 
        margin-bottom: 5%;
       
