--- a/client/src/styles/components/_Signup.scss
+++ b/client/src/styles/components/_Signup.scss
@@ -2,4 +2,14 @@
 @import "../utils/variables.scss";
 
 
+.sign-label{
+    margin-bottom: 2%;
+
+
+}
+
+.sign{
     
+    margin-top: 2% !important;
+    
+}
