--- a/client/src/styles/components/_AdminCard.scss
+++ b/client/src/styles/components/_AdminCard.scss
@@ -1,11 +1,12 @@
 @import "../utils/variables.scss";
 
         .card-container{
-           
-            background-color: plum;
+           width: 350px;
+            background-color: rgb(221, 160, 221);
             border-radius:50px;
             box-shadow: 0px 0px 10px 9px $dark-purple;
-       
+            padding-bottom: 15px;
+            
     
             #storie{
                 margin: 25px;
@@ -14,19 +15,18 @@
         
             .card-button{
                 background-color: palevioletred;
-                margin-top: 5%;
+                margin-top: 5px;
                 padding: 15px;
                 font-size: larger;
                 border: 5px solid  white;
                 border-style:double;
             }
             
-            // .card-img{
-                
-            // }
-        
-             
-               
+            .card-img{
+                margin-top: 10px;
+                width: 300px;
+            }
+                       
             .card-title{
                 font-weight: bold;
                 font-size: x-large;
@@ -41,8 +41,31 @@
 
 
 @media (width > 700px){
-  
+
+    .card-container{
     
+       width: 400px;
+      margin: 50px 200px 15px 200px;
+        .card-img{
+            width: 150px;
+        }
+
+        .card-title{
+            font-size: medium;
+        }
+
+        .card-button{
+            font-size: small;
+            cursor: pointer;
+        }
+        #storie{
+            font-size: small;
+            columns: 3;
+            width: fit-content;
+        }
+    }
+ 
+
     
     
 }
