--- a/client/src/styles/components/_AllTaleList.scss
+++ b/client/src/styles/components/_AllTaleList.scss
@@ -15,3 +15,20 @@
         text-decoration: none;
     }
 }
+
+#tales-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (width >600px) {
+    #tales-section{
+        display: grid;
+        grid-template-columns: repeat(2,1fr); /* Crea columnas automáticas con un ancho mínimo de 200px */
+        padding-left: 100px;
+        
+    }
+    
+}
