--- a/client/src/styles/components/_AdminCard.scss
+++ b/client/src/styles/components/_AdminCard.scss
@@ -6,6 +6,10 @@
             border-radius:50px;
             box-shadow: 0px 0px 10px 9px $dark-purple;
             padding-bottom: 15px;
+
+            &:hover{
+                transform: scale(1.2);
+            }        
             
     
             #storie{
